# BTC-5-min

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/backtest/: analytics.py  baseline_report.py  candidate_signal_report.py  compression_report.py  compression_validation_report.py  data_quality_report.py  diagnostics.py  edge_decay_report.py  edge_half_life_report.py  edge_quality_report.py  entry_window_analysis.py  fees.py  filter_range_optimizer.py  filter_relaxation_report.py  filters.py  forward_validation_report.py  hold_report.py  hourly_regime_report.py  latency_sensitivity_report.py  liquidity_sweep_report.py  microstructure_report.py  missed_opportunities_report.py  optimize.py  optimizer.py  passive_execution_report.py  position_sizing_report.py  presets.py  regime_memory_report.py  regime_report.py  replay.py  replay_matrix.py  research.py  research_gate.py  runner.py  settlement_source_report.py  side_performance_report.py  stale_trap_report.py  validate_best_window.py  walk_forward.py
app/data/: binance.py  chainlink.py  polymarket.py
app/execution/: engine.py
app/portfolio/: manager.py
app/risk/: manager.py
app/storage/: sqlite.py  (+1 more)
tests/: test_analytics.py  test_btc_feed.py  test_chainlink.py  test_edge_decay.py  test_fair_value.py  test_filters.py  test_maintenance.py  test_missed_opportunities.py  test_optimizer_matrix.py  test_orderbook_imbalance.py  test_presets_diagnostics.py  test_replay.py  test_research_reports.py  test_risk_portfolio.py  test_storage.py  test_strategy.py
(+7 files in other folders)
